--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -32,8 +32,8 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.2
       with:
-        name: name-of-artifact
-        path: dist/*
+        name: "KPD-The Lastest"
+        path: dist/main
         
   build-support:
     runs-on: ubuntu-latest
@@ -48,12 +48,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        
+        pip install pyinstaller
     - name: run Build
       run: |
         pyinstaller -F main.py
 
     - uses: actions/upload-artifact@v3.1.2
       with:
-        name: name-of-artifact
-        path: dist/*
+        name: "KPD-The Support"
+        path: dist/main
