--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-latest:
+  build-linux-latest:
 
     runs-on: ubuntu-latest
 
@@ -32,11 +32,34 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.2
       with:
-        name: "KPD-The Lastest"
+        name: "KPD-The Latest for Linux"
         path: dist/main
         
-  build-support:
-    runs-on: ubuntu-latest
+  build-win-latest:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install pyinstaller
+    - name: run Build
+      run: |
+        pyinstaller -F main.py
+
+    - uses: actions/upload-artifact@v3.1.2
+      with:
+        name: "KPD-The Latest for Windows"
+        path: dist/main.exe
+        
+  build-win-support:
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -55,5 +78,6 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.2
       with:
-        name: "KPD-The Support"
-        path: dist/main
+        name: "KPD-The Support for Windows"
+        path: dist/main.exe
+        
