--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -52,11 +52,23 @@ jobs:
     - name: run Build
       run: |
         pyinstaller -F main.py
-
+        
     - uses: actions/upload-artifact@v3.1.2
       with:
         name: "KPD-The Latest for Windows"
         path: dist/main.exe
+        
+    - name: run Nuitka Build
+    - uses: Nuitka/Nuitka-Action@main
+      with:
+        nuitka-version: main
+        script-name: main.py
+        onefile: true
+  
+    - uses: actions/upload-artifact@v3.1.2
+      with:
+        name: "KPD(Nuitka)-The Latest for Windows"
+        path: build/main.exe
         
   build-win-support:
     runs-on: windows-latest
